force-app/main/default/objects/Account/fields/X2019_Artic__c.field-meta.xml
<CustomField>
    <fullName>X2019_Artic__c</fullName>
    <label>2019 Artic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>