force-app/main/default/objects/Account/fields/X2019_Over_35_ft__c.field-meta.xml
<CustomField>
    <fullName>X2019_Over_35_ft__c</fullName>
    <label>2019 Over 35 ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>