force-app/main/default/objects/Account/fields/X2019_Spares_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2019_Spares_Revenue__c</fullName>
    <label>2019 Spares Revenue</label>
    <summarizedField>Parts_Account__c.X2019_Spares_Sales__c</summarizedField>
    <summaryForeignKey>Parts_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>