force-app/main/default/objects/Account/fields/YTD_Spend_Parts__c.field-meta.xml
<CustomField>
    <fullName>YTD_Spend_Parts__c</fullName>
    <label>YTD Spend-Parts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>