force-app/main/default/objects/Account/recordTypes/Corp_Dev_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Corp_Dev_Accounts</fullName>
    <active>true</active>
    <label>Corp Dev Accounts</label>
</RecordType>