force-app/main/default/objects/Account/recordTypes/Other_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Other_Contacts</fullName>
    <active>true</active>
    <label>Other Contacts</label>
</RecordType>