force-app/main/default/objects/Account/recordTypes/Other_Parts_Customer.recordType-meta.xml
<RecordType>
    <fullName>Other_Parts_Customer</fullName>
    <active>true</active>
    <description>Parts customers that don&apos;t own buses</description>
    <label>Other Parts Customer</label>
</RecordType>