force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Internal_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>notEqual</operation>
        <value>Competitor,&quot;MPO, COG or Other Planning Agency&quot;,Private Provider Reporting on Behalf of a Public Entity,Private-For-Profit Corporation,Private-Non-Profit Corporation,State Government Unit or Department of Transportation,Tribe,Supplier</value>
    </filters>
    <filters>
        <field>Internal_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <label>All Accounts</label>
</ListView>