force-app/main/default/objects/Account/listViews/My_Accounts_PSM_View.listView-meta.xml
<ListView>
    <fullName>My_Accounts_PSM_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Internal_Name__c</columns>
    <columns>Project_Sales_Manager__c</columns>
    <columns>RegionalMgr__c</columns>
    <columns>New_Start_Considerations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PSM_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <label>My Accounts (PSM View)</label>
</ListView>