force-app/main/default/objects/Account/listViews/Suppliers.listView-meta.xml
<ListView>
    <fullName>Suppliers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Internal_Name__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Supplier</value>
    </filters>
    <label>Suppliers</label>
</ListView>